--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
 }
 
 ul {
@@ -13,14 +14,14 @@ a {
 
 .part-1 {
   background-color: #1F2937;
-  color: white;
+  color: #F9FAF8;
   display: flex;
   flex-direction: column;
 }
 
 nav {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .header-text {
@@ -36,4 +37,40 @@ nav {
 
 .header-list-flex {
   margin: 10px;
+}
+
+.hero {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.hero-title {
+  font-size: 48px;
+  color: #F9FAF8;
+  font-weight: 900;
+  width: 50%;
+}
+
+.hero-subtext {
+  font-size: 18px;
+  color: #E5E7EB;
+  width: 50%;
+}
+
+.hero-button {
+  color: #F9FAF8;
+  background-color: #3882F6;
+  border-radius: 5px;
+  border-style: none;
+  outline-style: none;
+  font-weight: bold;
+  width: 100px;
+  height: 32px;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
 }
