--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,10 @@ nav {
 .hero {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 100px;
   margin-bottom: 100px;
+  margin-left: 250px;
+  margin-right: 250px;
+  margin-top: 100px;
 }
 
 .hero-title {
@@ -51,12 +53,14 @@ nav {
   color: #F9FAF8;
   font-weight: 900;
   width: 50%;
+  margin-bottom: 0;
 }
 
 .hero-subtext {
   font-size: 18px;
   color: #E5E7EB;
   width: 50%;
+  margin-top: 0;
 }
 
 .hero-button {
@@ -73,4 +77,10 @@ nav {
 .hero-content {
   display: flex;
   flex-direction: column;
+}
+
+.hero-img {
+  align-self: center;
+  background-color: gray;
+  padding: 100px 175px 100px 175px;
 }
