--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,6 @@ nav {
   background-color: gray;
   padding: 100px 175px 100px 175px;
 }
+
+/*-------------------------------------------------------------------------------*/
+
