--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .random-info-title {
@@ -121,6 +122,33 @@ nav {
   border-style: solid;
   border-width: 3px;
   border-radius: 20px;
+}
+
+/*-------------------------------------------------------------------------------*/
+
+.quote-section {
+  background-color: #E5E7EB;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #1F2937;
+  width: 40%;
+}
+
+.quote-author {
+  color: #1F2937;
+  font-weight: 900;
+  font-size: 24px;
+  align-self: flex-end;
+  width: 900px;
 }
 
 /*-------------------------------------------------------------------------------*/
