--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,39 @@ nav {
 
 /*-------------------------------------------------------------------------------*/
 
+.call-action-section {
+  display: flex;
+  justify-content: space-around;
+  background-color: #3882F6;
+  margin: 100px 300px 100px 300px;
+  border-radius: 7px;
+}
+
+.call-action-text {
+  padding: 60px 0px 60px 0px
+}
+
+.call-action-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #F9FAF8;
+  margin: 0;
+}
+
+.call-action-subtext {
+  color: #F9FAF8;
+  margin: 0;
+}
+
+.call-action-button {
+  align-self: center;
+  color: #F9FAF8;
+  font-size: 16px;
+  background-color: #3882F6;
+  border-color: #F9FAF8;
+  border-radius: 10px;
+  outline-style: solid;
+  border-style: none;
+  font-weight: bold;
+  padding: 10px 30px 10px 30px;
+}
