--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,15 @@ nav {
   font-weight: bold;
   padding: 10px 30px 10px 30px;
 }
+
+/*-------------------------------------------------------------------------------*/
+
+footer {
+  background-color: #1F2937;
+  padding: 30px;
+}
+
+.footer-text {
+  color: #E5E7EB;
+  text-align: center;
+}
